record-tile modify modal bug fix and some code refactoring.

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -10,7 +10,7 @@
 * item
 */
 
-.record-btn {
+.record-edit-btn {
   margin: 0px;
   padding: 0px;
   height: 24px;
@@ -75,7 +75,7 @@
   -webkit-appearance:none;
 }
 
-.record-btn-container {
+.record-edit-btn-container {
   position:absolute;
   top: 20px;
   right: 20px;
