--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -14,11 +14,17 @@
         <div class="record-note">
           <%= strip_tags record.note.try(:truncate, 500) %>
         </div>
-        <div class="record-btn-container">
-          <div class="record-btn" data-post="<%= record.id %>" data-toggle="modal" data-target="#edit-modal">
+        <div class="record-edit-btn-container">
+          <div class="record-edit-btn" data-record="<%= record.id %>" data-record-edit data-toggle="modal" data-target="#edit-record-modal">
             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
           </div>
-          <%= link_to record_path(record), class: "record-btn", method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
+
+
+          <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-post="<%= record.id %>" data-target="#edit-record-modal">
+            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+          </button> -->
+
+          <%= link_to record_path(record), class: "record-edit-btn", method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
           <% end %>
         </div>
@@ -26,3 +32,7 @@
     </div>
   </div>
 </div>
+
+
+
+
