--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -21,3 +21,19 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="edit-record-modal-label" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="edit-record-modal-label">Edit Record</h4>
+      </div>
+      <div id="edit-record-modal-content">
+      </div>
+    </div>
+  </div>
+</div>
