show record testing added.

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -129,7 +129,7 @@
   }
 }
 
-.speed-controller, .paly-controller {
+.speed-controller, .play-controller {
   text-align: center;
   color: rgba(0, 0, 0, 0.6);
 
