--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -25,7 +25,7 @@
         <h3 class="panel-title">Audio Controller</h3>
       </div>
       <div class="list-group">
-        <div class="paly-controller list-group-item">
+        <div class="play-controller list-group-item">
           <button id="backward-btn"class="controll-btn">
             <div>
               <span>
