--- a/app/views/bookmarks/_edit.html.erb
+++ b/app/views/bookmarks/_edit.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="pull-right">
-      <button class="btn btn-default" data-close-bookmark-form type="button">CANCLE</button>
+      <button class="btn btn-default" data-close-bookmark-form type="button">CANCEL</button>
       <%= f.submit "OK", class: "btn btn-primary" %>
     </div>
   <% end %>
