remove hash tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <div class="container">
     <!-- <div class="container"> -->
       <div class="navbar-header">
-        <a id="menu-toggle" class="navbar-brand" href="#">
+        <a id="menu-toggle" class="navbar-brand">
           <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
         </a>
       </div>
