--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,8 +1,10 @@
 .bookmark-tag {
+  opacity: 0.7;
   text-decoration: none !important;
 }
 
 .palette {
+  opacity: 0.7;
   height: 20px;
   width: 20px;
   display: inline-block;
@@ -43,6 +45,7 @@
 .color-14 {background-color: #c7def8;}
 
 .bookmark {
+  opacity: 0.7;
   display: inline-block;
   padding: 6px 12px;
   color: white;
