--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <div id="user_nav">
       <div class="main_text">
       <h1> LoroClip </h1>
-        <p class="lead-text">친구들과 함께 특별한 녹음을 준비해보세요</p>
+        <p class="lead-text">가장 효율적으로, 빈틈없이 녹음본을 듣고 관리하는 방법</p>
       </div>
 
       <div>
