--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -69,6 +69,18 @@
   text-overflow: ellipsis;
 }
 
+.waveform-container {
+  display: table;
+}
+
+.recorder-description {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 1.5em;
+  width: 100%;
+}
+
 #note-area:focus,
 #note-area:active {
   outline:0px !important;
