--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -31,7 +31,8 @@
   <div id="running-time" data-time="0"></div>
 
   <div class="row recorder-component">
-    <div class="col-md-12">
+    <div class="col-md-12 waveform-container">
+      <div class="recorder-description">위의 녹음 버튼을 클릭해 녹음을 시작하세요!</div>
       <div id="waveform-recorder">
         <wave style="position: absolute; z-index: 2; overflow: hidden; width: 0px; display: block; box-sizing: border-box; border-right-style: solid; border-right-width: 0px; border-right-color: rgb(51, 51, 51);">
           <canvas width="0" height="100" style="width: 0px;"></canvas>
