--- a/app/views/layouts/home_application.html.erb
+++ b/app/views/layouts/home_application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id='cover'></div>
+
+<% if flash[:error] %>
+  <div class="alert alert-danger alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong>문제가 있습니다!</strong> <%= flash[:error] %>
+  </div>
+<% end %>
+
 <%= yield %>
 
 </body>
