moved libvorbis to vendor assets

--- a/app/assets/javascripts/recorder.js.erb
+++ b/app/assets/javascripts/recorder.js.erb
@@ -10,9 +10,9 @@
 
   // initialize vorbis
   Vorbis.configure({
-    workerURL: '/libvorbis.worker.js',
-    moduleURL: '/libvorbis.module.min.js',
-    memoryInitializerURL: '/libvorbis.module.min.js.mem'
+    workerURL: '<%= asset_path("libvorbis/libvorbis.worker") %>',
+    moduleURL: '<%= asset_path("libvorbis/libvorbis.module.min.js") %>',
+    memoryInitializerURL: '<%= asset_path("libvorbis/libvorbis.module.min.js.mem") %>'
   });
 
   var AudioStream = {
