Use App.recorder instead of isRecording

--- a/app/assets/javascripts/recorder.js.erb
+++ b/app/assets/javascripts/recorder.js.erb
@@ -93,7 +93,6 @@
   Recorder.prototype._bindUI = function () {
     this.recordButton.on('click', function () {
       $('.recorder-description').hide();
-      bookmarkHandler.isRecording = true;
 
       this.record().then(function () {
         this.pauseButton.show(); this.saveButton.show();
@@ -145,7 +144,7 @@
 
       stream.addListener(this._onAudioProcess.bind(this));
 
-      this.initialzed = true;
+      this.initialized = true;
     }.bind(this));
   };
 
