--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,172 @@
-
-<div class="intro">
-  <div class="content">
-
-    <div id="user_nav">
-      <div class="main_text">
-      <h1> LoroClip </h1>
-        <p class="lead-text">가장 효율적으로, 빈틈없이 녹음본을 듣고 관리하는 방법</p>
-      </div>
-
-      <div>
-      <%= link_to "/auth/facebook", id:"fb-link" do %>
+<!-- Header -->
+	<section id="header" class="dark">
+		<header>
+			<h1>LoroClip</h1>
+			<p>가장 효율적으로, 빈틈없이 녹음본을 듣고 관리하는 방법</p>
+		</header>
+		<footer>
+			<div>
+				<%= link_to "/auth/facebook", id:"fb-link" do %>
         <div class="fb-join">
           <div class="fb-join-image">
             <%= image_tag "facebook-black.png", class: "fb-black"%>
           </div>
           <div class="fb-join-text">페이스북으로 시작하기</div>
         </div>
-      <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+      	<% end %>
+			</div>
+			
+			<div class="using-path">
+				<a href="https://play.google.com/store/apps/details?id=com.loroclip">
+				  <img alt="Get it on Google Play"
+				       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+				</a>
+			</div>
+		</footer>
+	</section>
+
+<!-- First -->
+	<section id="first" class="main">
+		<header>
+			<div class="container">
+				<h2>15자</h2>
+				<p>LoroClip은 의대생에 최적화된 기능을 바탕으로 별도의 녹음기가 없어도 깨끗한 녹음과
+    녹음파일을 편리하게 공유할 수 있는 앱입니다. </p>
+			</div>
+		</header>
+		<div class="content dark style1 featured">
+			<div class="container">
+				<div class="row">
+					<div class="4u 12u(narrow)">
+						<section>
+							<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
+							<header>
+								<h3>구간 북마크</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u 12u(narrow)">
+						<section>
+							<span class="feature-icon"><span class="icon fa-bolt"></span></span>
+							<header>
+								<h3>노이즈 필터링</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u 12u(narrow)">
+						<section>
+							<span class="feature-icon"><span class="icon fa-cloud"></span></span>
+							<header>
+								<h3>원격 클라우드 저장소</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Second -->
+	<section id="second" class="main">
+		<header>
+			<div class="container">
+				<h2>LoroClip, 이럴 때 필요합니다!</h2>
+				<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus.</p>
+			</div>
+		</header>
+		<div class="content style2 featured">
+			<div class="container">
+				<div class="row">
+					<div class="4u 12u(narrow)">
+						<section>
+							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<header>
+								<h3>구간 북마크</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u 12u(narrow)">
+						<section>
+							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<header>
+								<h3>노이즈 필터링</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+					<div class="4u 12u(narrow)">
+						<section>
+							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<header>
+								<h3>원격 클라우드 저장소</h3>
+							</header>
+							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
+							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
+							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
+							accumsan vivamus.</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+<!-- Fourth -->
+	<section id="fourth" class="main">
+		<header>
+			<div class="container">
+				<h2>정식버전이 출시되면 알려드립니다!</h2>
+				<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
+				feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+			</div>
+		</header>
+		<div class="content style4 featured">
+			<div class="container 75%">
+				<form method="post" action="#">
+					<div class="row 50%">
+						<div class="6u 12u(mobile)"><input type="text" placeholder="Name" /></div>
+						<div class="6u 12u(mobile)"><input type="text" placeholder="Email" /></div>
+					</div>
+					<div class="row 50%">
+						<div class="12u"><textarea name="message" placeholder="Message"></textarea></div>
+					</div>
+					<div class="row">
+						<div class="12u">
+							<ul class="actions">
+								<li><input type="submit" class="button" value="Send Message" /></li>
+								<li><input type="reset" class="button alt" value="Clear Form" /></li>
+							</ul>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+
+<!-- Footer -->
+	<section id="footer">
+		<div class="copyright">
+			<ul class="menu">
+				<li>&copy; Team HwaYo. All rights reserved.</li>
+			</ul>
+		</div>
+	</section>
