slack notification on user creation, new subscription

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -141,23 +141,23 @@
 		</header>
 		<div class="content style4 featured">
 			<div class="container 75%">
-				<form method="post" action="#">
+				<%= form_for Subscription.new do |f| %>
 					<div class="row 50%">
-						<div class="6u 12u(mobile)"><input type="text" placeholder="Name" /></div>
-						<div class="6u 12u(mobile)"><input type="text" placeholder="Email" /></div>
+						<div class="6u 12u(mobile)"><%= f.text_field :name, placeholder: "Name" %></div>
+						<div class="6u 12u(mobile)"><%= f.text_field :email, placeholder: "Email" %></div>
 					</div>
 					<div class="row 50%">
-						<div class="12u"><textarea name="message" placeholder="Message"></textarea></div>
+						<div class="12u"><%= f.text_area :message, placeholder: "Message" %></div>
 					</div>
 					<div class="row">
 						<div class="12u">
 							<ul class="actions">
-								<li><input type="submit" class="button" value="Send Message" /></li>
-								<li><input type="reset" class="button alt" value="Clear Form" /></li>
+								<li><%= f.submit class: "button", value: "Send Message" %></li>
+								<li><%= f.submit type: :reset, value: "Clear Form", class: "button alt" %></li>
 							</ul>
 						</div>
 					</div>
-				</form>
+					<% end %>
 			</div>
 		</div>
 	</section>
