--- a/app/assets/stylesheets/landing_home/main.scss
+++ b/app/assets/stylesheets/landing_home/main.scss
@@ -1998,7 +1998,7 @@
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url("images/overlay.png"), url("../../images/header.jpg");
+		background-image: asset_url("overlay.png"), asset_url("header.jpg");
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
