--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
         </div>
       	<% end %>
 			</div>
-			
+
 			<div class="using-path">
 				<a href="https://play.google.com/store/apps/details?id=com.loroclip">
 				  <img alt="Get it on Google Play"
@@ -91,7 +91,7 @@
 				<div class="row">
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
 								<h3>구간 북마크</h3>
 							</header>
@@ -103,7 +103,7 @@
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
 								<h3>노이즈 필터링</h3>
 							</header>
@@ -115,7 +115,7 @@
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><img src="images/pic03.jpg" alt=""></a>
+							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
 								<h3>원격 클라우드 저장소</h3>
 							</header>
