--- a/app/views/layouts/home_application.html.erb
+++ b/app/views/layouts/home_application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>LoroClip</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'landing_home/main', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'landing_home/main', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
