--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-  <%= javascript_include_tag 'player', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application/player', 'data-turbolinks-track' => true %>
 <% end %>
 
 <% content_for :navbar_button do %>
