Add modal and seperate audio controller partial from bookmark

--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -19,81 +19,6 @@
   <div class="player-component">
     <div class="panel panel-success"></div>
 
-    <div class="panel panel-success">
-      <div class="panel-heading">
-        <h3 class="panel-title">Audio Controller</h3>
-      </div>
-      <div class="list-group">
-        <div class="play-controller list-group-item">
-          <button id="backward-btn"class="controll-btn">
-            <div>
-              <span>
-                <i class="glyphicon glyphicon-backward"></i>
-              </span>
-            </div>
-            <div class="cotroll-btn-description">
-              Previous
-            </div>
-          </button>
-          <button class="controll-btn" data-action="play">
-            <div data-play>
-              <div>
-                <span>
-                  <i class="glyphicon glyphicon-play"></i>
-                </span>
-              </div>
-              <div class="cotroll-btn-description">
-                Play
-              </div>
-            </div>
-
-            <div data-pause style="display: none;">
-              <div>
-                <span>
-                  <i class="glyphicon glyphicon-pause"></i>
-                </span>
-              </div>
-              <div class="cotroll-btn-description">
-                Pause
-              </div>
-            </div>
-          </button>
-          <button id="forward-btn" class="controll-btn">
-            <div>
-              <span>
-                <i class="glyphicon glyphicon-forward"></i>
-              </span>
-            </div>
-            <div class="cotroll-btn-description">
-              Next
-            </div>
-          </button>
-        </div>
-
-        <div class="speed-controller list-group-item">
-          <button id="speed-down-btn" class="controll-btn">
-             <div>
-                <span>
-                  <i class="glyphicon glyphicon-backward"></i>
-                </span>
-              </div>
-              <div class="cotroll-btn-description">
-                down
-              </div>
-          </button>
-          <b><span id="speed-info">1.0</span>x</b>
-          <button id="speed-up-btn" class="controll-btn">
-            <div>
-              <span>
-                <i class="glyphicon glyphicon-forward"></i>
-              </span>
-            </div>
-            <div class="cotroll-btn-description">
-              up
-            </div>
-          </button>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'audio_controller' %>
   </div>
 </div>
