--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -9,7 +9,7 @@
   <%= render (@records) %>
 </div>
 
-<!-- Modal -->
+<!-- Edit Title Modal -->
 <div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="edit-record-modal-label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -18,6 +18,20 @@
         <h4 class="modal-title" id="edit-record-modal-label">Edit Record</h4>
       </div>
       <div id="edit-record-modal-content">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Share Modal -->
+<div class="modal fade" id="share-record-modal" tabindex="-1" role="dialog" aria-labelledby="share-record-modal-label" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="share-record-modal-label">Share Record</h4>
+      </div>
+      <div id="share-record-modal-content">
       </div>
     </div>
   </div>
