--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <!-- Header -->
 	<section id="header" class="dark">
-		<header>
-			<h1>LoroClip</h1>
-			<p>가장 효율적으로, 빈틈없이 녹음본을 듣고 관리하는 방법</p>
-		</header>
-		<footer>
+		<div id="header-content">
+			<header>
+				<h1>LoroClip</h1>
+				<p>가장 효율적으로, 빈틈없이 녹음본을 듣고 관리하는 방법</p>
+			</header>
 			<div>
 				<%= link_to "/auth/facebook", id:"fb-link" do %>
         <div class="fb-join">
@@ -15,7 +15,8 @@
         </div>
       	<% end %>
 			</div>
-
+		</div>
+		<footer>
 			<div class="using-path">
 				<a href="https://play.google.com/store/apps/details?id=com.loroclip">
 				  <img alt="Get it on Google Play"
@@ -83,7 +84,7 @@
 		<header>
 			<div class="container">
 				<h2>LoroClip, 이럴 때 필요합니다!</h2>
-				<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus.</p>
+				<!-- <p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus.</p> -->
 			</div>
 		</header>
 		<div class="content style2 featured">
@@ -93,36 +94,27 @@
 						<section>
 							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
-								<h3>구간 북마크</h3>
+								<h3>녹음파일에서 원하는 구간만 듣고 싶을 때</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>녹음파일의 여러 부분을 들어가며 듣고 싶은 구간을 찾았던 것을 구간 북마크 기능으로 쉽게 찾을 수 있습니다.</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
 							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
-								<h3>노이즈 필터링</h3>
+								<h3>교수님 목소리가 잘 안 들릴 때</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>잡음 때문에 녹음한 강의가 잘 들리지 않는 녹음파일에 노이즈 필터링을 적용하여 깔끔하게 들을 수 있습니다.</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
 							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
 							<header>
-								<h3>원격 클라우드 저장소</h3>
+								<h3>녹음파일이 많아 저장 용량이 부족할 때</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>휴대폰에 용량이 부족해 다른 녹음파일을 지워도 클라우드 저장소와 동기화가 되어 언제든지 다시 들을 수 있습니다.</p>
 						</section>
 					</div>
 				</div>
@@ -135,25 +127,24 @@
 		<header>
 			<div class="container">
 				<h2>정식버전이 출시되면 알려드립니다!</h2>
-				<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-				feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+				<p>아래 양식에 메일 주소와 메시지를 남겨주시면 정식버전 출시 소식을 알려드리겠습니다.</p>
 			</div>
 		</header>
 		<div class="content style4 featured">
 			<div class="container 75%">
 				<%= form_for Subscription.new do |f| %>
 					<div class="row 50%">
-						<div class="6u 12u(mobile)"><%= f.text_field :name, placeholder: "Name" %></div>
-						<div class="6u 12u(mobile)"><%= f.text_field :email, placeholder: "Email" %></div>
+						<div class="6u 12u(mobile)"><%= f.text_field :name, placeholder: "이름" %></div>
+						<div class="6u 12u(mobile)"><%= f.text_field :email, placeholder: "이메일" %></div>
 					</div>
 					<div class="row 50%">
-						<div class="12u"><%= f.text_area :message, placeholder: "Message" %></div>
+						<div class="12u"><%= f.text_area :message, placeholder: "메시지" %></div>
 					</div>
 					<div class="row">
 						<div class="12u">
 							<ul class="actions">
-								<li><%= f.submit class: "button", value: "Send Message" %></li>
-								<li><%= f.submit type: :reset, value: "Clear Form", class: "button alt" %></li>
+								<li><%= f.submit class: "button", value: "보내기" %></li>
+								<li><%= f.submit type: :reset, value: "다시 쓰기", class: "button alt" %></li>
 							</ul>
 						</div>
 					</div>
