--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,9 +29,8 @@
 	<section id="first" class="main">
 		<header>
 			<div class="container">
-				<h2>15자</h2>
-				<p>LoroClip은 의대생에 최적화된 기능을 바탕으로 별도의 녹음기가 없어도 깨끗한 녹음과
-    녹음파일을 편리하게 공유할 수 있는 앱입니다. </p>
+				<h2>강의 콘텐츠 하이라이트 플랫폼</h2>
+				<p>강의를 녹음하는 도중 중요한 부분들을 원터치로 기록하세요. LoroClip이 당신의 북마크를 통해 가장 효율적으로, 언제 어디서나 학습할 수 있도록 도와줍니다.</p>
 			</div>
 		</header>
 		<div class="content dark style1 featured">
@@ -43,22 +42,16 @@
 							<header>
 								<h3>구간 북마크</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>녹음 파일의 어떤 부분부터 들어야 할지 모르겠다구요? 녹음하면서 북마크로 중요한 부분을 표시하고 그 부분만 찾아 들으세요. 강의 도중 능동적으로 중요도를 파악하는 것은 집중력 향상에도 큰 도움이 됩니다.</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<span class="feature-icon"><span class="icon fa-bolt"></span></span>
+							<span class="feature-icon"><span class="icon fa-bolt" style="background-image: url(<%= asset_path("wave_white.png")%>);background-repeat: no-repeat;background-position: center; "></span></span>
 							<header>
 								<h3>노이즈 필터링</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>LoroClip을 통해 강의자의 목소리를 잡음 없이 더욱 뚜렷하게 들으세요. LoroClip은 1024개 주파수 대역폭 분석을 통해 녹음 과정에서 발생한 잡음을 제거합니다.</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
@@ -67,10 +60,7 @@
 							<header>
 								<h3>원격 클라우드 저장소</h3>
 							</header>
-							<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-							Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-							ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-							accumsan vivamus.</p>
+							<p>번거롭게 이메일을 보내거나 USB를 연결할 필요가 없습니다. LoroClip이 Wi-Fi를 통해 자동으로 클라우드 서버에 파일을 업로드합니다. 모바일, PC 어디에서든지 강의를 복습하세요.</p>
 						</section>
 					</div>
 				</div>
