--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
 	<section id="second" class="main">
 		<header>
 			<div class="container">
-				<h2>LoroClip, 이럴 때 필요합니다!</h2>
+				<h2>LoroClip은 이렇게 사용합니다.</h2>
 				<!-- <p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus.</p> -->
 			</div>
 		</header>
@@ -82,29 +82,30 @@
 				<div class="row">
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
+							<%= image_tag 'pic01.png', class: "image fit featured" %>
 							<header>
-								<h3>녹음파일에서 원하는 구간만 듣고 싶을 때</h3>
+								<h3>1. 나만의 북마크 만들기</h3>
 							</header>
-							<p>녹음파일의 여러 부분을 들어가며 듣고 싶은 구간을 찾았던 것을 구간 북마크 기능으로 쉽게 찾을 수 있습니다.</p>
+							<p>내가 자주 쓰는 나만의 북마크를 만들고 수정, 관리하세요.</p>
+							<p>(현재 웹을 통해서만 관리 가능)</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
+							<%= image_tag 'pic02.png', class: "image fit featured" %>
 							<header>
-								<h3>교수님 목소리가 잘 안 들릴 때</h3>
+								<h3>2. 녹음하기</h3>
 							</header>
-							<p>잡음 때문에 녹음한 강의가 잘 들리지 않는 녹음파일에 노이즈 필터링을 적용하여 깔끔하게 들을 수 있습니다.</p>
+							<p>LoroClip 앱을 사용해 강의를 녹음하세요. 놓치고 싶지 않은 부분이 있을 땐 단 한번의 터치로 북마크를 남길 수 있습니다.</p>
 						</section>
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<a href="#" class="image fit featured"><%= image_tag 'pic03.jpg' %></a>
+							<%= image_tag 'pic03.png', class: "image fit featured" %>
 							<header>
-								<h3>녹음파일이 많아 저장 용량이 부족할 때</h3>
+								<h3>3. 어디서든 다시 듣기</h3>
 							</header>
-							<p>휴대폰에 용량이 부족해 다른 녹음파일을 지워도 클라우드 저장소와 동기화가 되어 언제든지 다시 들을 수 있습니다.</p>
+							<p>녹음파일과 북마크는 계정과 연결되어 보관되므로 웹/모바일을 가리지 않고 언제 어디서든 쉽게 이용 가능합니다.</p>
 						</section>
 					</div>
 				</div>
