--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,7 @@
 				<div class="row">
 					<div class="4u 12u(narrow)">
 						<section>
-							<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
+							<span class="feature-icon"><span class="icon fa-bookmark"></span></span>
 							<header>
 								<h3>구간 북마크</h3>
 							</header>
@@ -48,7 +48,7 @@
 					</div>
 					<div class="4u 12u(narrow)">
 						<section>
-							<span class="feature-icon"><span class="icon fa-bolt" style="background-image: url(<%= asset_path("wave_white.png")%>);background-repeat: no-repeat;background-position: center; "></span></span>
+							<span class="feature-icon"><span class="icon fa-sound"></span></span>
 							<header>
 								<h3>노이즈 필터링</h3>
 							</header>
