user can stop sharing records also. change UX of record sharing

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -10,6 +10,15 @@
 * item
 */
 
+.share-submit {
+  background: #466daa !important;
+  padding: 6px 12px !important;
+}
+.edit-submit {
+  background: #466daa !important;
+  padding: 6px 12px !important;
+}
+
 #waveform-recorder {
   position: relative;
   height: 100px;
