--- a/app/views/records/_edit_modal.html.erb
+++ b/app/views/records/_edit_modal.html.erb
@@ -14,6 +14,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>
-    <%= f.submit "OK", class: "btn btn-primary" %>
+    <%= f.submit "OK", class: "btn btn-primary edit-submit" %>
   </div>
 <% end %>
