--- a/app/views/records/_edit_modal.html.erb
+++ b/app/views/records/_edit_modal.html.erb
@@ -13,7 +13,7 @@
       </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>
-    <%= f.submit "OK", class: "btn btn-primary edit-submit" %>
+    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+    <%= f.submit "Edit", class: "btn btn-primary edit-submit" %>
   </div>
 <% end %>
