edit color picker

--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -8,7 +8,7 @@
   height: 20px;
   width: 20px;
   display: inline-block;
-  background-color: red;
+  background-color: #f2f264;
   border-radius: 2px;
 }
 
@@ -29,20 +29,20 @@
 /*
 * 일단통과
 */
-.color-1 {background-color: #e11d21;}
-.color-2 {background-color: #eb6420;}
-.color-3 {background-color: #fbca04;}
-.color-4 {background-color: #009800;}
-.color-5 {background-color: #006b75;}
-.color-6 {background-color: #207de5;}
-.color-7 {background-color: #0052cc;}
-.color-8 {background-color: #5319e7;}
-.color-9 {background-color: #f7c6c7;}
-.color-10 {background-color: #fad8c7;}
-.color-11 {background-color: #fef2c0;}
-.color-12 {background-color: #bfe5bf;}
-.color-13 {background-color: #bfdadc;}
-.color-14 {background-color: #c7def8;}
+.color-1 {background-color: #f2f264;}
+.color-2 {background-color: #f8a56d;}
+.color-3 {background-color: #aad88f;}
+.color-4 {background-color: #89efdb;}
+.color-5 {background-color: #76bbf4;}
+.color-6 {background-color: #bea1cc;}
+.color-7 {background-color: #e084a2;}
+.color-8 {background-color: #efd82f;}
+.color-9 {background-color: #f16c56;}
+.color-10 {background-color: #59ce93;}
+.color-11 {background-color: #44b9bc;}
+.color-12 {background-color: #7272d3;}
+.color-13 {background-color: #925ead;}
+.color-14 {background-color: #f44e86;}
 
 .bookmark {
   opacity: 0.7;
