--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -23,16 +23,16 @@
             </button>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <span class="palette color-1" data-color="#e11d21"></span><span class="palette color-2" data-color="#eb6420"></span><span class="palette color-3" data-color="#fbca04"></span><span class="palette color-4" data-color="#009800"></span><span class="palette color-5" data-color="#006b75"></span><span class="palette color-6" data-color="#207de5"></span><span class="palette color-7" data-color="#0052cc"></span>
+                <span class="palette color-1" data-color="#f2f264"></span><span class="palette color-2" data-color="#f8a56d"></span><span class="palette color-3" data-color="#aad88f"></span><span class="palette color-4" data-color="#44b9bc"></span><span class="palette color-5" data-color="#7272d3"></span><span class="palette color-6" data-color="#925ead"></span><span class="palette color-7" data-color="#e084a2"></span>
               </li>
 
               <li>
-                <span class="palette color-8" data-color="#5319e7"></span><span class="palette color-9" data-color="#f7c6c7"></span><span class="palette color-10" data-color="#fad8c7"></span><span class="palette color-11" data-color="#fef2c0"></span><span class="palette color-12" data-color="#bfe5bf"></span><span class="palette color-13" data-color="#bfdadc"></span><span class="palette color-14" data-color="#c7def8"></span>
+                <span class="palette color-8" data-color="#efd82f"></span><span class="palette color-9" data-color="#f16c56"></span><span class="palette color-10" data-color="#59ce93"></span><span class="palette color-11" data-color="#89efdb"></span><span class="palette color-12" data-color="#76bbf4"></span><span class="palette color-13" data-color="#bea1cc"></span><span class="palette color-14" data-color="#f44e86"></span>
 
               </li>
             </ul>
             <%= f.label :color, class: "hidden" %>
-            <%= f.text_field :color, class: "hidden", value: "#e11d21"%>
+            <%= f.text_field :color, class: "hidden", value: "#efd82f"%>
           </div>
         </div>
         <div class="pull-right">
