--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -23,11 +23,11 @@
             </button>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <span class="palette color-1" data-color="#f2f264"></span><span class="palette color-2" data-color="#f8a56d"></span><span class="palette color-3" data-color="#aad88f"></span><span class="palette color-4" data-color="#44b9bc"></span><span class="palette color-5" data-color="#7272d3"></span><span class="palette color-6" data-color="#925ead"></span><span class="palette color-7" data-color="#e084a2"></span>
+                <span class="palette color-1" data-color="#f2f264"></span><span class="palette color-2" data-color="#f8a56d"></span><span class="palette color-3" data-color="#aad88f"></span><span class="palette color-4" data-color="#89efdb"></span><span class="palette color-5" data-color="#76bbf4"></span><span class="palette color-6" data-color="#bea1cc"></span><span class="palette color-7" data-color="#e084a2"></span>
               </li>
 
               <li>
-                <span class="palette color-8" data-color="#efd82f"></span><span class="palette color-9" data-color="#f16c56"></span><span class="palette color-10" data-color="#59ce93"></span><span class="palette color-11" data-color="#89efdb"></span><span class="palette color-12" data-color="#76bbf4"></span><span class="palette color-13" data-color="#bea1cc"></span><span class="palette color-14" data-color="#f44e86"></span>
+                <span class="palette color-8" data-color="#efd82f"></span><span class="palette color-9" data-color="#f16c56"></span><span class="palette color-10" data-color="#59ce93"></span><span class="palette color-11" data-color="#44b9bc"></span><span class="palette color-12" data-color="#7272d3"></span><span class="palette color-13" data-color="#925ead"></span><span class="palette color-14" data-color="#f44e86"></span>
 
               </li>
             </ul>
