--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -20,7 +20,11 @@
     <p id="subtitle" class="text-center text-info">&nbsp;</p>
     <div id="wave-timeline">
     </div>
-    <div id="waveform-player" data-id="<%= @record.id %>" data-url="<%= @record.file.url %>"></div>
+    <% if @record.noise_reduced_file_url.nil? %>
+      <div id="waveform-player" data-id="<%= @record.id %>" data-url="<%= @record.file.url %>"></div>
+    <% else %>
+      <div id="waveform-player" data-id="<%= @record.id %>" data-url="<%= @record.noise_reduced_file_url %>"></div>
+    <% end %>
 </div>
 
 <div class="container">
