--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   	<div>
     	<%= image_tag "logo.png", id: "logo" %>
 	    <h1>
-	    	<p>Record with Efficency,</p>
+	    	<p>Record with Efficiency.</p>
 	    	<p>Anywhere, Anytime.</p>
 	    </h1>
     	<%= link_to "/auth/facebook" do %>
