--- a/app/assets/stylesheets/landing_home/main.scss
+++ b/app/assets/stylesheets/landing_home/main.scss
@@ -1,8 +1,7 @@
-// @import url("font-awesome.min.css");
-// @import url("http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic");
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Raleway:500,300);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 /*
 	Tessellate by HTML5 UP
@@ -82,7 +81,7 @@
 }
 
 body {
-	font-family:'Raleway', 'Nanum Barun Gothic', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -644,6 +643,11 @@ h1, h2, h3, h4, h5, h6 {
 
   
 }
+
+#main-page {
+	font-family: 'Raleway', sans-serif !important;
+}
+
 #main-page-background {
 	background-image: asset_url('background.jpg') !important;
 }
