add privacy policy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,12 @@
             My Bookmark List
           <% end %>
         </li>
+        <li class="sidebar-item sidebar-item-footer">
+          <%= link_to privacy_policy_path do %>
+            <span class="glyphicon glyphicon-info-sign sidebar-icon" aria-hidden="true"></span>
+            Privacy Policy
+          <% end %>
+        </li>
     </ul>
   </nav>
   <nav class="navbar navbar-default navbar-fixed-top nav-custom">
