--- a/app/assets/stylesheets/slide-push-menu/sidebar.scss
+++ b/app/assets/stylesheets/slide-push-menu/sidebar.scss
@@ -69,6 +69,11 @@
     background: rgba(255,255,255,0.2);
 }
 
+.sidebar-nav .sidebar-item-footer {
+    position: fixed;
+    bottom: 0;
+}
+
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
   text-decoration: none;
